# SEGClobber

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
data/tests/: test_30.txt  test_60.txt
scripts/: _runtests.py  conjecture_diagram.py  diagram.py  explore.py  pattern.py  segclobber_path.py  test.sh
src/: conjecture_diagram.py  database3.cpp  database3.h  dbmanage4.cpp  diagram.py  explore.py  game.cpp  game.h  main.cpp  makefile  miscTypes.cpp  miscTypes.h  options.h  pattern.py  runtests.py  solver.cpp  solver.h  test.sh  utils.cpp  zobrist.cpp
src/tests/: test_10.txt  test_20.txt  test_40.txt  test_50.txt
src_common/: CMakeLists.txt  bound.cpp  database.cpp  miscTypes.cpp  options.h  solver.cpp  solver.h  state.cpp  utils.cpp  utils.h  zobrist.cpp
src_dbmanage/: CMakeLists.txt  dbmanage.cpp
src_segclobber/: CMakeLists.txt  segclobber.cpp
